# MediaPlayer

./: CMakeLists.txt  README.md  qml.qrc  resources.qrc
gui/: main.qml
gui/components/: ButtonImage.qml
gui/mian_view_elements/: PlayListArea.qml  PlayerControl.qml
source/: main.cpp  mediamanager.cpp  mediamanager.h
source/media/: mediamanager.cpp  mediamanager.h  mediaplayer.cpp  mediaplayer.h
source/model/: mediafile.cpp  mediafile.h  medialistmodel.cpp  medialistmodel.h
source/time/: timeutils.cpp  timeutils.h
